--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 						
 						<div class="margin-bottom">
 							<h7>2020년 3월 8일 오후 1시<br></h7>
-							<h7>참석하셔서 우리의 결혼을 축하해 주세요</h7>
+							<h7>부디 참석하셔서 자리를 빛내주시기 바랍니다</h7>
 							<h4><a href="tel:031-1234-5678" class="phone">031-1234-5678</a></h4>
 							<h8>경기도 수원시 ㅇㅇ구 ㅇㅇ동 ㅇㅇ웨딩홀<br>ㅇ층 ㅇㅇ홀</h8>
 							
